--- a/index.html
+++ b/index.html
@@ -8,20 +8,24 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<nav>
-    <div>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Contact Us</a></li>
-      </ul>
-    </div>
-  </nav>
-  <center>
-  <img src="pexels-shkrabaanthony.jpg" alt="makeup">
-  <img src="pexels-enginakyurt.jpg" alt="hair style">
-  <img src="pexels-kpaukshtite.jpg" alt="nail pant">
-  </center>
+  <header>
+   <nav>
+      <div>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <section>
+      <img src="pexels-shkrabaanthony.jpg" alt="makeup">
+      <img src="pexels-enginakyurt.jpg" alt="hair style">
+      <img src="pexels-kpaukshtite.jpg" alt="nail pant">
+    </section>
+  </main>
 </body>
 </html>
